; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_mruby.c_on_config_exit.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_mruby.c_on_config_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32* }
%struct.mruby_configurator_t = type { i32*, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_7__*, i32*)* @on_config_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_config_exit(i32* %0, %struct.TYPE_7__* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.mruby_configurator_t*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = bitcast i32* %8 to i8*
  %10 = bitcast i8* %9 to %struct.mruby_configurator_t*
  store %struct.mruby_configurator_t* %10, %struct.mruby_configurator_t** %7, align 8
  %11 = load %struct.mruby_configurator_t*, %struct.mruby_configurator_t** %7, align 8
  %12 = getelementptr inbounds %struct.mruby_configurator_t, %struct.mruby_configurator_t* %11, i32 0, i32 1
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i64 -1
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.mruby_configurator_t*, %struct.mruby_configurator_t** %7, align 8
  %19 = getelementptr inbounds %struct.mruby_configurator_t, %struct.mruby_configurator_t* %18, i32 0, i32 1
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i64 0
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %17, %24
  br i1 %25, label %26, label %34

26:                                               ; preds = %3
  %27 = load %struct.mruby_configurator_t*, %struct.mruby_configurator_t** %7, align 8
  %28 = getelementptr inbounds %struct.mruby_configurator_t, %struct.mruby_configurator_t* %27, i32 0, i32 1
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = call i32 @free(i64 %32)
  br label %34

34:                                               ; preds = %26, %3
  %35 = load %struct.mruby_configurator_t*, %struct.mruby_configurator_t** %7, align 8
  %36 = getelementptr inbounds %struct.mruby_configurator_t, %struct.mruby_configurator_t* %35, i32 0, i32 1
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 -1
  store %struct.TYPE_6__* %38, %struct.TYPE_6__** %36, align 8
  %39 = load %struct.mruby_configurator_t*, %struct.mruby_configurator_t** %7, align 8
  %40 = getelementptr inbounds %struct.mruby_configurator_t, %struct.mruby_configurator_t* %39, i32 0, i32 0
  %41 = load i32*, i32** %40, align 8
  %42 = icmp ne i32* %41, null
  br i1 %42, label %43, label %55

43:                                               ; preds = %34
  %44 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %45 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %44, i32 0, i32 0
  %46 = load i32*, i32** %45, align 8
  %47 = icmp eq i32* %46, null
  br i1 %47, label %48, label %55

48:                                               ; preds = %43
  %49 = load %struct.mruby_configurator_t*, %struct.mruby_configurator_t** %7, align 8
  %50 = getelementptr inbounds %struct.mruby_configurator_t, %struct.mruby_configurator_t* %49, i32 0, i32 0
  %51 = load i32*, i32** %50, align 8
  %52 = call i32 @mrb_close(i32* %51)
  %53 = load %struct.mruby_configurator_t*, %struct.mruby_configurator_t** %7, align 8
  %54 = getelementptr inbounds %struct.mruby_configurator_t, %struct.mruby_configurator_t* %53, i32 0, i32 0
  store i32* null, i32** %54, align 8
  br label %55

55:                                               ; preds = %48, %43, %34
  ret i32 0
}

declare dso_local i32 @free(i64) #1

declare dso_local i32 @mrb_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
